--- a/Smart Solutions.html
+++ b/Smart Solutions.html
@@ -9,18 +9,18 @@
 <body>
     <!-- Navigation Bar -->
     <div class="bar">
-        <a href="index.html"><img class="main-logo" src="./Assets/file (1).png" alt="Main Logo"></a>
+        <!-- <a href="index.html"><img class="main-logo" src="./Assets/file (1).png" alt="Main Logo"></a> -->
         
         <div class="bar-attributes">
-            <a href="index.html"><span class="home">Home</span></a>
+            <!-- <a href="index.html"><span class="home">Home</span></a>
             <a href="newfile.html"><span class="form">Community</span></a>
             <a href="sample.html"><span class="event">Events</span></a>
-    
+     -->
             <!-- Features Dropdown -->
             <div class="dropdown">
                 <span class="features">Features</span>
                 <div class="dropdown-content">
-                    <a href="#solar">Solar Calculator</a>
+                    <!-- <a href="#solar">Solar Calculator</a> -->
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
     </div>
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
         <div class="footer-content">
             <p>&copy; 2024 Sustainable Cities and Communities for a Better Future. All Rights Reserved.</p>
             <ul>
@@ -147,7 +147,7 @@
             <p>Address: 123 Green Street, Eco City</p>
             <p>Phone: (123) 456-7890</p>
         </div>
-    </footer>
+    </footer> -->
 
     <script src="Smart Solutions.js"></script>
 </body>
