--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <!-- <a href="index.html"><img class="main-logo" src="./Assets/file (1).png" alt="Main Logo"></a> -->
         
         <div class="bar-attributes">
-            <!-- <a href="index.html"><span class="home">Home</span></a>
+            <a href="index.html"><span class="home">Home</span></a>
             <a href="newfile.html"><span class="form">Community</span></a>
             <a href="sample.html"><span class="event">Events</span></a>
-     -->
+    
             <!-- Features Dropdown -->
             <div class="dropdown">
                 <span class="features">Features</span>
