--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Navigation Bar -->
     <div class="bar">
-        <!-- <a href="index.html"><img class="main-logo" src="./Assets/file (1).png" alt="Main Logo"></a> -->
+        <a href="index.html"><img class="main-logo" src="./Assets/file (1).png" alt="Main Logo"></a>
         
         <div class="bar-attributes">
             <a href="index.html"><span class="home">Home</span></a>
